<resources>
    <string name="app_name">OTP GeneratorWithRecovery</string>
    <string name="first_fragment_label">OTP Generator With Recovery</string>
    <string name="otp_secret_qr_code_scanner_fragment_label">Scan OTP Secret (QR Code)</string>
    <string name="otp_secret_manual_input_fragment_label">Input OTP Secret (manual)</string>
    <string name="list_otp_fragment_label">List OTP</string>
    <string name="create_backup_fragment_label">Create Backup</string>
    <string name="list_created_backup_fragment_label">List Created Backup</string>
    <string name="save_shared_backup_qr_code_fragment_label">Save Shared Backup (QR Code)</string>
    <string name="save_shared_backup_manual_input_fragment_label">Save Shared Backup (manual)</string>
    <string name="list_shared_backup_fragment_label">List Shared Backup</string>
    <string name="recover_otp_by_scan_qr_code_fragment_label">Recover OTP (QR Code)</string>
    <string name="recover_otp_manual_input_fragment_label">Recover OTP (manual)</string>
    <string name="show_client_identity_fragment_label">Show Client Identity</string>
    <string name="add_friend_by_scan_qr_code_fragment_label">Add Friend (QR Code)</string>
    <string name="add_friend_by_manual_input_fragment_label">Add Friend (manual)</string>
    <string name="list_friend_fragment_label">List Friend</string>
    <string name="set_backup_server_fragment_label">Set Backup Server</string>

    <string name="camera_permission_rationale_title">Permission Needed For Camera</string>
    <string name="camera_permission_rationale_message">This permission is needed to scan the QR code.</string>

    <string name="secret_is_required">Secret (required)</string>
    <string name="issuer_is_optional">Issuer (optional, default: unknown)</string>
    <string name="account_name_is_optional">Account Name (optional, default: unknown)</string>
    <string name="backup_is_required">Backup (required)</string>
    <string name="friend_client_identity_is_required">Friend\'s client identity (required)</string>
    <string name="backup_server_is_required">Backup Server (required)</string>
    <string name="name_is_optional">Name (default: unknown)</string>

    <string name="add">Add</string>
    <string name="add_recipient">Add Recipient</string>
    <string name="submit">Submit</string>
    <string name="qr_code">QR Code</string>
    <string name="client_identity">Client Identity</string>
    <string name="check_availability">Check Availability</string>

    <string name="client_identity_shared_preferences_file">com.example.otpgeneratorwithrecovery.clientidentity</string>
    <string name="friends_shared_preferences_file">com.example.otpgeneratorwithrecovery.friends</string>
    <string name="otp_secret_shared_preferences_file">com.example.otpgeneratorwithrecovery.otpsecret</string>
    <string name="created_backup_shared_preferences_file">com.example.otpgeneratorwithrecovery.createdbackup</string>
    <string name="shared_backup_shared_preferences_file">com.example.otpgeneratorwithrecovery.sharedbackup</string>
</resources>