<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPSecretManualInputFragment">
    <ScrollView
        android:id="@+id/scroll_view_recipients"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Spinner
                android:id="@+id/type_otp_secret_manual_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </Spinner>

            <EditText
                android:id="@+id/secret_otp_secret_manual_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secret_is_required"/>
            <EditText
                android:id="@+id/issuer_otp_secret_manual_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issuer_is_optional"/>
            <EditText
                android:id="@+id/account_name_otp_secret_manual_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_name_is_optional"/>

            <Button
                android:id="@+id/button_submit_otp_secret_manual_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>