<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_first_to_otp_secret_qr_code_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_secret_qr_code_scanner_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_otp_secret_manual_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_secret_manual_input_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_list_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_otp_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_create_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_backup_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_list_created_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_created_backup_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_save_shared_backup_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_shared_backup_qr_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_save_shared_backup_manual_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_shared_backup_manual_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/button_first_to_list_shared_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_shared_backup_fragment_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>