<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.otpgeneratorwithrecovery.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_OTPSecretQRCodeScannerFragment"
            app:destination="@id/OTPSecretQRCodeScannerFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_OTPSecretManualInputFragment"
            app:destination="@id/OTPSecretManualInputFragment" />
    </fragment>
    <fragment
        android:id="@+id/OTPSecretQRCodeScannerFragment"
        android:name="com.example.otpgeneratorwithrecovery.OTPSecretQRCodeScannerFragment"
        android:label="@string/otp_secret_qr_code_scanner_fragment_label"
        tools:layout="@layout/fragment_otp_secret_qr_code_scanner">

        <action
            android:id="@+id/action_OTPSecretQRCodeScannerFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/OTPSecretManualInputFragment"
        android:name="com.example.otpgeneratorwithrecovery.OTPSecretManualInputFragment"
        android:label="@string/otp_secret_manual_input_fragment_label"
        tools:layout="@layout/fragment_otp_secret_manual_inputr">

        <action
            android:id="@+id/action_FirstFragment_to_OTPSecretManualInputFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>